# pip-search

./: LICENSE  README.md  pyproject.toml
pip_search/: search.py
